--- a/index.html
+++ b/index.html
@@ -2,26 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>CLAR - Celestial Luminara Authority Of Research & Advancement</title>
   <meta name="description" content="CLAR – Cosmic news and information web app with planets, stars, and space missions.">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="clar-logo.png">
-
-  <!-- Manifest for PWA -->
-  <link rel="manifest" href="manifest.json">
-
+  
   <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
-
-  <!-- Optional: Theme color for browser -->
-  <meta name="theme-color" content="#0af">
+  <!-- Manifest for PWA -->
+  <link rel="manifest" href="manifest.json">
+  <!-- Favicon -->
+  <link rel="icon" href="clar-logo.png">
 </head>
 <body>
-  <!-- Header -->
   <header>
     <div class="logo-container">
       <img src="clar-logo.png" alt="CLAR Logo" class="logo">
@@ -35,31 +27,27 @@
     </nav>
   </header>
 
-  <!-- Latest News Section -->
-  <section id="news">
-    <h2>Latest Cosmic News</h2>
-    <div id="news-list" class="cards-container"></div>
-  </section>
+  <main>
+    <section id="news">
+      <h2>Latest Cosmic News</h2>
+      <div id="news-list" class="cards-container"></div>
+    </section>
 
-  <!-- Planets Section -->
-  <section id="planets">
-    <h2>Planets & Stars</h2>
-    <div id="planet-list" class="cards-container"></div>
-  </section>
+    <section id="planets">
+      <h2>Planets & Stars</h2>
+      <div id="planet-list" class="cards-container"></div>
+    </section>
 
-  <!-- Space Missions Section -->
-  <section id="missions">
-    <h2>Space Missions</h2>
-    <div id="missions-list" class="cards-container"></div>
-  </section>
+    <section id="missions">
+      <h2>Space Missions</h2>
+      <div id="missions-list" class="cards-container"></div>
+    </section>
+  </main>
 
-  <!-- Footer -->
   <footer>
     <p>© 2025 CLAR - Celestial Luminara Authority Of Research & Advancement</p>
   </footer>
 
-  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
-
