--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Space Explorer App</title>
+  <title>CLAR – Celestial Luminara Authority of Research & Advancement</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Manifest for PWA -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0d1117">
 </head>
 <body>
-  <h1>🚀 Space Explorer App</h1>
+  <h1>✨ CLAR</h1>
+  <h2>Celestial Luminara Authority of Research & Advancement</h2>
 
   <!-- Search -->
   <div class="search-container">
-    <input type="text" id="search" placeholder="Search for planets, rockets...">
+    <input type="text" id="search" placeholder="Search for planets, rockets, telescopes...">
   </div>
 
   <!-- Grid -->
