--- a/index.html
+++ b/index.html
@@ -3,25 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CLAR – Space News</title>
+  <title>CLAR – Celestial Luminara Authority of Research & Advancement</title>
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0d1117">
 </head>
 <body>
-  <header>
-    <h1>✨ CLAR</h1>
-    <h2>Celestial Luminara Authority of Research & Advancement</h2>
-    <input type="text" id="search" placeholder="Search space news...">
-  </header>
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <div class="logo-section">
+      <img src="icons/logo.png" alt="CLAR Logo" class="logo">
+      <h1>CLAR</h1>
+    </div>
+    <input type="text" id="search" placeholder="Search...">
+    <nav>
+      <ul>
+        <li><a href="#solar-system">☀️ Solar System</a></li>
+        <li><a href="#missions">🚀 Missions</a></li>
+        <li><a href="#news">📰 Space News</a></li>
+      </ul>
+    </nav>
+  </aside>
 
-  <main id="news-container">
-    <p>Loading the universe’s latest updates...</p>
+  <!-- Main content -->
+  <main class="content">
+    <!-- Solar system section -->
+    <section id="solar-system">
+      <h2>☀️ Solar System</h2>
+      <div class="grid" id="planets-container">
+        <!-- Planets will be inserted here by JS -->
+      </div>
+    </section>
+
+    <!-- Historical missions section -->
+    <section id="missions">
+      <h2>🚀 Historical Missions</h2>
+      <div class="grid" id="missions-container">
+        <!-- Missions will be inserted here by JS -->
+      </div>
+    </section>
+
+    <!-- Live news section -->
+    <section id="news">
+      <h2>📰 Latest Space News</h2>
+      <div class="grid" id="news-container">
+        <p>Loading latest news...</p>
+      </div>
+    </section>
   </main>
-
-  <footer>
-    <p>Powered by CLAR | Live Space News</p>
-  </footer>
 
   <script src="script.js"></script>
 </body>
