--- a/index.html
+++ b/index.html
@@ -3,54 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CLAR – Celestial Luminara Authority of Research & Advancement</title>
+  <title>CLAR - Celestial Luminara Authority of Research & Advancement</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#0d1117">
 </head>
 <body>
-  <!-- Sidebar -->
-  <aside class="sidebar">
-    <div class="logo-section">
-      <img src="icons/logo.png" alt="CLAR Logo" class="logo">
-      <h1>CLAR</h1>
-    </div>
-    <input type="text" id="search" placeholder="Search...">
-    <nav>
-      <ul>
-        <li><a href="#solar-system">☀️ Solar System</a></li>
-        <li><a href="#missions">🚀 Missions</a></li>
-        <li><a href="#news">📰 Space News</a></li>
-      </ul>
-    </nav>
-  </aside>
-
-  <!-- Main content -->
-  <main class="content">
-    <!-- Solar system section -->
-    <section id="solar-system">
-      <h2>☀️ Solar System</h2>
-      <div class="grid" id="planets-container">
-        <!-- Planets will be inserted here by JS -->
+  <div class="app-container">
+    
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <div class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/NASA_logo.svg" alt="CLAR Logo">
+        <h2>CLAR</h2>
       </div>
-    </section>
+      <input type="text" id="search" placeholder="Search CLAR...">
+      <nav>
+        <ul>
+          <li><a href="#planets">🌍 Planets</a></li>
+          <li><a href="#missions">🚀 Missions</a></li>
+          <li><a href="#news">📰 Space News</a></li>
+        </ul>
+      </nav>
+    </aside>
 
-    <!-- Historical missions section -->
-    <section id="missions">
-      <h2>🚀 Historical Missions</h2>
-      <div class="grid" id="missions-container">
-        <!-- Missions will be inserted here by JS -->
-      </div>
-    </section>
+    <!-- Main Content -->
+    <main class="content">
+      <header>
+        <h1>Celestial Luminara Authority of Research & Advancement</h1>
+      </header>
 
-    <!-- Live news section -->
-    <section id="news">
-      <h2>📰 Latest Space News</h2>
-      <div class="grid" id="news-container">
-        <p>Loading latest news...</p>
-      </div>
-    </section>
-  </main>
+      <!-- Planets Section -->
+      <section id="planets">
+        <h2>☀️ Solar System</h2>
+        <div class="grid" id="planets-container"></div>
+      </section>
+
+      <!-- Missions Section -->
+      <section id="missions">
+        <h2>🚀 Space Missions</h2>
+        <div class="grid" id="missions-container"></div>
+      </section>
+
+      <!-- News Section -->
+      <section id="news">
+        <h2>📰 Latest Space News</h2>
+        <div id="news-container"></div>
+      </section>
+    </main>
+  </div>
 
   <script src="script.js"></script>
 </body>
