--- a/index.html
+++ b/index.html
@@ -3,53 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CLAR - Celestial Luminara Authority of Research & Advancement</title>
+  <title>CLAR – Celestial Luminara Authority of Research & Advancement</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0d1117">
 </head>
 <body>
-  <div class="app-container">
-    
-    <!-- Sidebar -->
-    <aside class="sidebar">
-      <div class="logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/NASA_logo.svg" alt="CLAR Logo">
-        <h2>CLAR</h2>
-      </div>
-      <input type="text" id="search" placeholder="Search CLAR...">
-      <nav>
-        <ul>
-          <li><a href="#planets">🌍 Planets</a></li>
-          <li><a href="#missions">🚀 Missions</a></li>
-          <li><a href="#news">📰 Space News</a></li>
-        </ul>
-      </nav>
-    </aside>
+  <aside class="sidebar">
+    <img src="images/clar-logo.png" alt="CLAR Logo" class="logo">
+    <input type="text" id="search" placeholder="Search...">
+    <nav>
+      <a href="#planets">🌍 Planets</a>
+      <a href="#missions">🚀 Missions</a>
+      <a href="#news">📰 News</a>
+    </nav>
+  </aside>
 
-    <!-- Main Content -->
-    <main class="content">
-      <header>
-        <h1>Celestial Luminara Authority of Research & Advancement</h1>
-      </header>
+  <main class="content">
+    <section id="planets">
+      <h2>🌍 The Solar System</h2>
+      <div id="planets-container" class="grid"></div>
+    </section>
 
-      <!-- Planets Section -->
-      <section id="planets">
-        <h2>☀️ Solar System</h2>
-        <div class="grid" id="planets-container"></div>
-      </section>
+    <section id="missions">
+      <h2>🚀 Space Missions</h2>
+      <div id="missions-container" class="grid"></div>
+    </section>
 
-      <!-- Missions Section -->
-      <section id="missions">
-        <h2>🚀 Space Missions</h2>
-        <div class="grid" id="missions-container"></div>
-      </section>
+    <section id="news">
+      <h2>📰 Latest Space News</h2>
+      <div id="news-container" class="grid"></div>
+    </section>
+  </main>
 
-      <!-- News Section -->
-      <section id="news">
-        <h2>📰 Latest Space News</h2>
-        <div id="news-container"></div>
-      </section>
-    </main>
-  </div>
+  <footer>
+    <p>✨ CLAR – Celestial Luminara Authority of Research & Advancement</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
